--- a/conf/application.conf
+++ b/conf/application.conf
@@ -33,10 +33,10 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://localhost/opq?characterEncoding=UTF-8"
-db.default.user=opq-user
-db.default.password=opq808
+#db.default.driver=com.mysql.jdbc.Driver
+#db.default.url="jdbc:mysql://localhost/opq?characterEncoding=UTF-8"
+#db.default.user=opq-user
+#db.default.password=opq808
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
@@ -44,7 +44,7 @@ db.default.password=opq808
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
-applyEvolutions.default=true
+#applyEvolutions.default=true
 
 # Ebean configuration
 # ~~~~~
