--- a/conf/application.conf
+++ b/conf/application.conf
@@ -52,9 +52,9 @@ application.langs="en"
 # By convention, the default datasource is named `default`
 #
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://localhost/opq?characterEncoding=UTF-8"
-db.default.user=opq-user
-db.default.password=opq808
+db.default.url="jdbc:"${DATABASE_URL_DB}
+db.default.user=${DATABASE_USERNAME_DB}
+db.default.password=${DATABASE_PASSWORD_DB}
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
