--- a/conf/application.conf
+++ b/conf/application.conf
@@ -56,6 +56,17 @@ db.default.url="jdbc:"${DATABASE_URL_DB}
 db.default.user=${DATABASE_USERNAME_DB}
 db.default.password=${DATABASE_PASSWORD_DB}
 
+# SMTP Configuration
+# ~~~~
+# SMTP Authentication
+smtp.host=${SMTP_HOST}
+smtp.port=${SMTP_PORT}
+smtp.ssl=true
+smtp.tls=true
+smtp.user=${SMTP_USER}
+smtp.password=${SMTP_PASSWORD}
+
+
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
