Updated copyright date. #89

--- a/conf/application.cloudbees.conf
+++ b/conf/application.cloudbees.conf
@@ -1,4 +1,4 @@
-# This is the CloudBees configuration file for opq-ao
+# This is the CloudBees configuration file for OPQHub
 
 include "application.conf"
 
