Added first draft of build guide as well as generalized link for websocket connection between map and cloud. #125

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -95,4 +95,4 @@ logger.play=INFO
 logger.application=DEBUG
 
 # Location of websocket server for getting main page data
-opqhub.websockets.server="ws://emilia.ics.hawaii.edu:8194/public"
+opqhub.websockets.server="ws://localhost:9000/public"
