--- a/conf/application.conf
+++ b/conf/application.conf
@@ -13,7 +13,7 @@
 #   You should have received a copy of the GNU General Public License
 #   along with opq-ao.  If not, see <http://www.gnu.org/licenses/>.
 #
-#   Copyright 2014 Anthony Christe
+#   Copyright 2015 Anthony Christe
 
 
 # This is the main configuration file for the application.
@@ -23,7 +23,7 @@
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
-application.secret="OCgPLlZk2c1AI8_k0ICRGyTNi1rPK99s<8r2ChpU41GS9]IxlmSuE/K2;=QmAio7"
+application.secret=${?APPLICATION_SECRET}
 
 # The application languages
 # ~~~~~
@@ -33,7 +33,7 @@ application.langs="en"
 # ~~~~~
 # Define the Global object class for this application.
 # Default to Global in the root package.
-# application.global=Global
+application.global=Global
 
 # Router
 # ~~~~~
@@ -51,21 +51,19 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-db.default.driver=org.h2.Driver
-db.default.url="jdbc:h2:mem:play"
-db.default.user=sa
-db.default.password=""
+db.default.driver=${?DB_DEFAULT_DRIVER}
+db.default.url=${?DB_DEFAULT_URL}
+db.default.user=${?DB_DEFAULT_USER}
+db.default.password=${?DB_DEFAULT_PASSWORD}
 
 # Mailer configuration
-smtp.host="smtp.gmail.com"
-smtp.port=465
-smtp.ssl=true
-smtp.tls=true
-smtp.user="your_alert_email"
-smtp.pass="your_alert_email_password"
+smtp.host=${?SMTP_HOST}
+smtp.port=${?SMTP_PORT}
+smtp.ssl=${?SMTP_SSL}
+smtp.tls=${?SMTP_TLS}
+smtp.user=${?SMTP_USER}
+smtp.pass=${?SMTP_PASS}
 
-
-#
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
 
@@ -73,6 +71,8 @@ smtp.pass="your_alert_email_password"
 # ~~~~~
 # You can disable evolutions if needed
 applyEvolutions.default=true
+applyUpEvolutions.default=true
+applyDownEvolutions.default=false
 
 # Ebean configuration
 # ~~~~~
@@ -93,6 +93,3 @@ logger.play=INFO
 
 # Logger provided to your application:
 logger.application=DEBUG
-
-# Location of websocket server for getting main page data
-opqhub.websockets.server="ws://localhost:9000/public"
